--- a/src/index.html
+++ b/src/index.html
@@ -7,51 +7,7 @@
     <link rel="icon" href="img/ico.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 
-    <script>
-        window.addEventListener('scroll', function() {
-            var elements = document.querySelectorAll('.content, .about, .about_text, .about_photo, .about_2, .text, .image-container'); // замініть це на селектори ваших елементів
-            var windowHeight = window.innerHeight;
-
-            function checkPosition() {
-                for (var i = 0; i < elements.length; i++) {
-                    var element = elements[i];
-                    var positionFromTop = elements[i].getBoundingClientRect().top;
-
-                    if (positionFromTop - windowHeight <= 0) {
-                        element.classList.add('fade-in-element');
-                    }
-                }
-            }
-
-            checkPosition();
-        });
-        document.addEventListener('DOMContentLoaded', function() {
-            var elements = document.querySelectorAll('.content, .about, .about_text, .about_photo, .about_2, .text'); // замініть це на селектори ваших елементів
-            var windowHeight = window.innerHeight;
-
-            function checkPosition() {
-                for (var i = 0; i < elements.length; i++) {
-                    var element = elements[i];
-                    var positionFromTop = elements[i].getBoundingClientRect().top;
-
-                    if (positionFromTop - windowHeight <= 0) {
-                        element.classList.add('fade-in-element');
-                    }
-                }
-            }
-
-            checkPosition();
-
-            window.addEventListener('scroll', checkPosition);
-        });
-
-
-
-        function scrollToSection(sectionId) {
-            const section = document.getElementById(sectionId);
-            section.scrollIntoView({ behavior: 'smooth' });
-        }
-    </script>
+    <script src="scripts/script.js"></script>
 
 <body>
 <div class="main">
@@ -63,27 +19,12 @@
     <div class="menuTest">
         <p onclick="scrollToSection('about')">A propos de moi</p>
         <p onclick="scrollToSection('news')">Actualités</p>
-        <p onclick="scrollToSection('gallery')">Gallerie</p>
+        <p onclick="scrollToSection('gallery')">Gallérie</p>
     </div>
     <div class="top_parallax">
         <div class="top_bar">
             <h1 style="color: white">DAVAI TENNIS</h1>
         </div>
-        <div class="navigation_bar">
-            <p onclick="scrollToSection('about')">A propos de moi</p>
-            <p onclick="scrollToSection('news')">Actualits</p>
-            <p onclick="scrollToSection('gallery')">Gallérie</p>
-        </div>
-        <script>
-            // JavaScript для руху зображення
-            window.addEventListener('scroll', () => {
-                const scrollPosition = window.scrollY;
-                // Змінюємо позицію фонового зображення відповідно до прокрутки
-                document.querySelectorAll('.top_parallax').forEach(parallax => {
-                    parallax.style.backgroundPosition = `80% ${-0.1 * scrollPosition}px`;
-                });
-            });
-        </script>
     </div>
 
     <div class="content">
@@ -119,40 +60,50 @@
 
         <div class="just_text">
             <div class=".text">
-                                    <p>Pour parvenir à me faire une place parmi les meilleures joueuses de ma catégorie, il faut s’entrainer dur, avec une détermination sans faille, et progresser au classement. Cela ne peut se faire sans participer à des grands tournois nationaux et internationaux. Je travaille donc pendant une partie des vacances scolaires pour contribuer au financement de mes déplacements. En effet, mon coach, qui m’entraîne et m’accompagne en tournois bénévolement depuis plusieurs mois, ne peut pas tout prendre en charge. Je réfléchis également à suivre dès septembre prochain mes cours scolaires en distanciel pour avoir une organisation plus adaptée à ce double projet mais cela a également un coût. </p>
-                                    <p>Si vous avez la possibilité de m’aider à devenir joueuse professionnelle tout en poursuivant mes études, je vous invite à déposer la participation de votre choix dans cette cagnotte.</p>
-                                    <p>Merci d’avance pour votre aide et je vous tiendrai bien évidemment au courant de ma progression tennistique et scolaire. </p>
-                                    <p style="margin-top: 20px; font-size: 30px">Tetiana</p>
+                <p>Pour parvenir à me faire une place parmi les meilleures joueuses de ma catégorie, il faut s’entrainer dur, avec une détermination sans faille, et progresser au classement. Cela ne peut se faire sans participer à des grands tournois nationaux et internationaux. Je travaille donc pendant une partie des vacances scolaires pour contribuer au financement de mes déplacements. En effet, mon coach, qui m’entraîne et m’accompagne en tournois bénévolement depuis plusieurs mois, ne peut pas tout prendre en charge. Je réfléchis également à suivre dès septembre prochain mes cours scolaires en distanciel pour avoir une organisation plus adaptée à ce double projet mais cela a également un coût. </p>
+                <p>Si vous avez la possibilité de m’aider à devenir joueuse professionnelle tout en poursuivant mes études, je vous invite à déposer la participation de votre choix dans cette cagnotte.</p>
+                <p>Merci d’avance pour votre aide et je vous tiendrai bien évidemment au courant de ma progression tennistique et scolaire. </p>
+                <p style="margin-top: 20px; font-size: 30px">Tetiana</p>
             </div>
         </div>
 
         <h1 id="news">Actualités</h1>
 
         <div class="about">
-            <div class="about_photo">
-                <img src="img/gallery/g_img_3.jpg" alt="img12">
+            <div class="about_photo"  style="width: 400px">
+                <img src="img/gallery/g_img_1.jpg" alt="img12">
             </div>
 
             <div class="about_text" style="border-radius: 10px; background-color: #f0f0f0" >
-                <h1>Text</h1>
-                <p>text text text</p>
-                <p>text text text</p>
-                <p>text text text</p>
+                <p style="font-size: 30px">Septembre 2023</p>
+                <p>Vainqueur au tournoi de Saint-Pierre d’Irube. Une victoire contre Maya Beriot, classée 2/6</p>
             </div>
         </div>
-        <!--            <div class="news">-->
-        <!--                <div class="news_img">-->
-        <!--                    <div class="description">-->
-        <!--                        <p>Bodsfng</p>-->
-        <!--                        <p>sdf</p>-->
-        <!--                        <p>adfas</p>-->
-        <!--                    </div>-->
-        <!--                </div>-->
 
-        <!--            </div>-->
+        <div class="about">
+            <div class="about_photo"  style="width: 400px">
+                <img src="img/news/news_img1.png" alt="img12">
+            </div>
+
+            <div class="about_text" style="border-radius: 10px; background-color: #f0f0f0" >
+                <p style="font-size: 30px">Novembre 2023:</p>
+                <p>Vainqueur au tournoi de Floirac. Une victoire contre Candice Laurent, classée 2/6</p>
+            </div>
+        </div>
+
+        <div class="about">
+            <div class="about_photo"  style="width: 400px">
+                <img src="img/news/news_img2.png" alt="img12">
+            </div>
+
+            <div class="about_text" style="border-radius: 10px; background-color: #f0f0f0" >
+                <p style="font-size: 30px">Novembre 2023:</p>
+                <p>Décembre 2023: Finaliste au tournoi de Biganos. Les victoires contre Luna Buijtenhuijs, classée 2/6 et Émilie Villemiane, classée 1/6, puis une défaite par Justine Bordessoule, classée 2/6</p>
+            </div>
+        </div>
 
 
-        <h1 id="gallery">Gallerie</h1>
+        <h1 id="gallery">Gallérie</h1>
 
 
         <div class="gallery">
@@ -171,48 +122,21 @@
             <div class="image-container">
                 <img src="img/gallery/g_img_5.jpg" alt="g_img_5">
             </div>
+            <div class="image-container">
+                <img src="img/gallery/g_img_8.png" alt="g_img_8">
+            </div>
         </div>
 
 
     </div>
 
     <div class="bottom_bar">
-        <p>example@gmail.com</p>
+        <p>Pour me contacter vous pouvez:</p><p>m’appeler sur +38 050 059 8681 (uniquement sur WhatsApp)
+            Ou
+            m’écrire au t.zhytelna@gmail.com</p>
     </div>
     <div class="space_for_phone"></div>
 
 </div>
-<script>
-    function openNav() {
-        document.getElementById("mySidebar").style.width = "250px";
-        document.getElementById("main").style.marginRight = "250px";
-    }
-
-    function closeNav() {
-        document.getElementById("mySidebar").style.width = "0";
-        document.getElementById("main").style.marginRight= "0";
-    }
-
-    const menuBtn = document.querySelector('.menu-toggle');
-    const menuLinks = document.querySelectorAll('.menuTest p');
-    const menu = document.querySelector('.menuTest');
-
-    menuBtn.addEventListener('click', () => {
-        menuBtn.classList.toggle('open');
-        menu.classList.toggle('active');
-    });
-
-    menuLinks.forEach(link => {
-        link.addEventListener('click', () => {
-            menuBtn.classList.toggle('open');
-            menu.classList.toggle('active');
-        });
-    });
-
-    function scrollToSection(id) {
-        const element = document.getElementById(id);
-        element.scrollIntoView({behavior: "smooth"});
-    }
-</script>
 </body>
 </html>
