--- a/src/index.html
+++ b/src/index.html
@@ -26,26 +26,11 @@
         <div class="top_bar">
             <h1 style="color: white">DAVAI TENNIS</h1>
         </div>
-<!--        <div class="navigation_bar">-->
-<!--            <p onclick="scrollToSection('about')">A propos de moi</p>-->
-<!--            <p onclick="scrollToSection('news')">Actualités</p>-->
-<!--            <p onclick="scrollToSection('gallery')">Gallérie</p>-->
-<!--        </div>-->
-<!--        <script>-->
-<!--            // JavaScript для руху зображення-->
-<!--            window.addEventListener('scroll', () => {-->
-<!--                const scrollPosition = window.scrollY;-->
-<!--                // Змінюємо позицію фонового зображення відповідно до прокрутки-->
-<!--                document.querySelectorAll('.top_parallax').forEach(parallax => {-->
-<!--                    parallax.style.backgroundPosition = `80% ${-0.1 * scrollPosition}px`;-->
-<!--                });-->
-<!--            });-->
-<!--        </script>-->
     </div>
 
     <div class="content">
         <div class="about" id="about">
-            <div class="about_text">
+            <div class="about_text" style="margin-top: -50px">
                 <h1>Salut,</h1>
                 <p>Je m’appelle Tetiana. Je suis arrivée en France avec ma grande sœur en mars 2022, à l’âge de 14 ans, après avoir fui l’Ukraine.</p>
                 <p>Mon père a perdu son travail à cause de la guerre et mes parents, restés à Kiev, sont dans une situation financière compliquée. Ma sœur et moi avons été accueillies à Hossegor par des personnes dévouées qui nous ont hébergées, se sont occupées de nous et m’ont offert la possibilité de continuer à jouer au tennis. Cette situation ne pouvait pas durer longtemps. Ma sœur a dû retourner en Ukraine et j’ai été prise en charge par l’Aide Sociale à l’Enfance, qui m’a trouvé une famille d’accueil à Tarnos. Tout cela a été pour moi une période très difficile.</p>
